tirocinio-smart/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tirocinio-smart-service
  namespace: tirocinio-smart
spec:
  type: LoadBalancer
  selector:
    app: tirocinio-smart
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: http
